Table products {
  id uuid [pk]
  sku varchar [not null]
  name varchar [not null]
  price double [not null]
  is_active boolean [default: true]
  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp
  deleted_at timestamp
}

Table stocks {
  id uuid [pk]
  product_id uuid [ref: > products.id]
  qty integer [not null]
  updated_at timestamp
  created_at timestamp [default: `current_timestamp`]
  deleted_at timestamp
}

Table discounts {
  id uuid [pk]
  type varchar [not null]
  description text
  discount_value double
  is_active boolean [default: true]
  valid_from timestamp
  valid_to timestamp
  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp
  deleted_at timestamp
}

Table discount_rules {
  id uuid [pk]
  discount_id uuid [ref: > discounts.id]
  product_id uuid [ref: > products.id]
  role varchar(20) [not null]
  quantity integer [not null]
  quantity_operator varchar(20) [default: 'equal']
  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp
  deleted_at timestamp
}

Table customers {
  id uuid [pk]
  name varchar [not null]
  email varchar [not null, unique]
  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp
  deleted_at timestamp
}

Table orders {
  id uuid [pk]
  customer_id uuid [ref: > customers.id]
  status varchar(20) [default: 'pending']
  total_amount double
  total_discount double
  total_payment double
  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp
  deleted_at timestamp
}

Table order_details {
  id uuid [pk]
  order_id uuid [ref: > orders.id]
  product_id uuid [ref: > products.id]
  quantity integer [not null]
  price double [not null]
  subtotal double [not null]
  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp
  deleted_at timestamp
}

Table order_discounts {
  id uuid [pk]
  order_id uuid [ref: > orders.id]
  product_id uuid [ref: > products.id]
  name text
  qty integer
  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp
  deleted_at timestamp
}